// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ColorButton blue 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  Color Button
</button>
`;

exports[`Storyshots ColorButton red 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "red",
    }
  }
>
  Color Button
</button>
`;

exports[`Storyshots StyledButton Default 1`] = `
<button
  className="sc-bdnxRM jltbX storybook-button storybook-button--medium storybook-button--primary"
  onClick={[Function]}
  size="medium"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots StyledButton Primary 1`] = `
<button
  className="sc-bdnxRM jltbX storybook-button storybook-button--large storybook-button--primary"
  onClick={[Function]}
  size="large"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots StyledButton Secondary 1`] = `
<button
  className="sc-bdnxRM jltbX storybook-button storybook-button--small storybook-button--secondary"
  onClick={[Function]}
  size="small"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;
